-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10
-
None
-
-
3cb5f45dd (dev)
There is a new namespace error in qtbase (windows-11_23H2-msvc2022-developer-build):
https://testresults.qt.io/coin/integration/qt/qt5/tasks/nightly1745150402
Log:
https://testresults.qt.io/coin/api/log/qt/qtbase/ba83c52c38f1ff5b97ff0f2b4a342a1131bea6ae/WindowsWindows_11_23H2x86_64WindowsWindows_11_23H2x86_64MSVC2022qtci-windows-11_23H2-x86_64-54-0f3066DebugAndRelease_Sccache_StandaloneExamples_UseConfigure_WarningsAreErrors/7521276a1c51381dba72f948e9a241a7c7144a84/build_1745151204/log.txt.gz
C:\Users\qt\work\install\include\QtCore/qgenericitemmodel.h(164): note: or 'TestNamespace::tst_QGenericItemModel' C:\Users\qt\work\qt\qtbase\tests\auto\corelib\itemmodels\qgenericitemmodel\tst_qgenericitemmodel.cpp(993): error C2872: 'tst_QGenericItemModel': ambiguous symbol C:\Users\qt\work\qt\qtbase\tests\auto\corelib\itemmodels\qgenericitemmodel\tst_qgenericitemmodel.cpp(281): note: could be 'tst_QGenericItemModel' C:\Users\qt\work\install\include\QtCore/qgenericitemmodel.h(164): note: or 'TestNamespace::tst_QGenericItemModel' C:\Users\qt\work\qt\qtbase\tests\auto\corelib\itemmodels\qgenericitemmodel\tst_qgenericitemmodel.cpp(1049): error C2872: 'tst_QGenericItemModel': ambiguous symbol C:\Users\qt\work\qt\qtbase\tests\auto\corelib\itemmodels\qgenericitemmodel\tst_qgenericitemmodel.cpp(281): note: could be 'tst_QGenericItemModel' C:\Users\qt\work\install\include\QtCore/qgenericitemmodel.h(164): note: or 'TestNamespace::tst_QGenericItemModel' C:\Users\qt\work\qt\qtbase\tests\auto\corelib\itemmodels\qgenericitemmodel\tst_qgenericitemmodel.cpp(1066): error C2872: 'tst_QGenericItemModel': ambiguous symbol C:\Users\qt\work\qt\qtbase\tests\auto\corelib\itemmodels\qgenericitemmodel\tst_qgenericitemmodel.cpp(281): note: could be 'tst_QGenericItemModel' C:\Users\qt\work\install\include\QtCore/qgenericitemmodel.h(164): note: or 'TestNamespace::tst_QGenericItemModel' C:\Users\qt\work\qt\qtbase\tests\auto\corelib\itemmodels\qgenericitemmodel\tst_qgenericitemmodel.cpp(1128): error C2872: 'tst_QGenericItemModel': ambiguous symbol
- resulted from
-
QTQAINFRA-6540 Windows platforms are missing -qtnamespace builds
-
- Closed
-
For Gerrit Dashboard: QTBUG-136136 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
641355,3 | QGIM: remove unnecessary friend declaration for the test class | dev | qt/qtbase | Status: MERGED | +2 | 0 |