QGIM: remove unnecessary friend declaration for the test class

We don't need it (for now), and it causes ambiguities with namespaced
builds on MSVC, so remove it. If we need it again, then we need to
forward declare the class in the global namespace first.

Fixes: QTBUG-136136
Change-Id: I96c7d2557a5e84d3fd78eb9098442e19024347b5
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>